# doci

./: .gitignore  CMakeLists.txt  README.md
include/: CG.h  DOCI.h  davidson.h  debug.h  doci.h  lapack.h  macros.h  options.h  read_fcidump.h  wrapper_solvers.h
src/: CG.c  DOCI.c  Doxyfile.in  davidson.c  doci.c  executable.c  read_fcidump.c  wrapper_solvers.c
tests/: DOCI_input.in  N2_STO3G.FCIDUMP  coHF.out  co_631g_1.FCIDUMP  corand.out  corandom.out  lifHF.out  lifrand.out  lifrandom.out
