cmake_minimum_required(VERSION 3.7.2)
project(doci)
set(doci_MMP_VERSION "0.1")
set(doci_VERSION "${doci_MMP_VERSION} (2017-05-28)")
set(doci_AUTHORS "Klaas Gunst")
set(doci_DESCRIPTION "An implementation of DOCI (doubly occupied configuration interaction)")
set(doci_EMAIL "klaas.gunst@ugent.be")
set(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake/Modules")

#Add the sources
file(GLOB SOURCES "${CMAKE_SOURCE_DIR}/src/*.c")

option(BUILD_DOXYGEN	"Use Doxygen to create a HTML/PDF manual" OFF)
option(DEBUG 		"Debug symbols used" 			  OFF)
option(DEBUGFLAG        "Compile with DDEBUG flag" 		  OFF)
option(LOWOPT 		"Optimization level of compilation O/O3"  OFF)
option(DAVIDIT 		"Shows the Davidson iterations"           OFF)

if("${CMAKE_C_COMPILER_ID}" MATCHES "Intel")
    find_package(MKL)
    if(MKL_FOUND)
	message("MKL found")
	include_directories(${MKL_INCLUDE_DIRS})
	set (LAPACK_LIBRARIES "${MKL_LIBRARIES}")
    else()
	message("MKL not found")
	find_package (LAPACK REQUIRED)
    endif()
else()
    find_package (LAPACK REQUIRED)
endif()

include_directories(include)

if("${CMAKE_C_COMPILER_ID}" MATCHES "Intel")
    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -w3")
else()
    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall")
endif()

# OpenMP
find_package (OpenMP)
if (OPENMP_FOUND)
    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
endif (OPENMP_FOUND)

if (DEBUG)
    if("${CMAKE_C_COMPILER_ID}" MATCHES "Intel")
	set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g")
    else()
	set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -fsanitize=address")
    endif()
endif (DEBUG)
if (DEBUGFLAG)
    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DDEBUG")
endif (DEBUGFLAG)
if(DAVIDIT)
    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DDAVIDIT")
endif (DAVIDIT)
if ( LOWOPT )
    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS}")
else ()
    if("${CMAKE_C_COMPILER_ID}" MATCHES "Intel")
	set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -xHOST -O3")
    else()
	set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -march=native -O3")
    endif()
endif ( LOWOPT )

if (BUILD_DOXYGEN)
    find_package (Doxygen)
    if (NOT DOXYGEN_FOUND)
	message (FATAL_ERROR "Doxygen is needed to build the documentation. Please install it correctly.")
    endif(NOT DOXYGEN_FOUND)
    configure_file (${doci_SOURCE_DIR}/src/Doxyfile.in ${doci_BINARY_DIR}/Doxyfile @ONLY IMMEDIATE)
    add_custom_target (doc COMMAND ${DOXYGEN_EXECUTABLE} ${doci_BINARY_DIR}/Doxyfile SOURCES ${doci_BINARY_DIR}/Doxyfile)
endif(BUILD_DOXYGEN)

add_executable(doci ${SOURCES})
target_link_libraries(doci ${LAPACK_LIBRARIES} m)
